<resources>
    <string name="app_name">WWNews</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="youremail_com">Youremail@--.com</string>
    <string name="login">Login</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
</resources>