<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.androidgangs.wwnews.ui.fragment.login.LoginViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.login.LoginFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black">

            <TextView

                android:id="@+id/emailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_4"
                android:layout_marginBottom="@dimen/margin_16"
                android:text="@string/email"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintBottom_toTopOf="@+id/editTextEmailAddress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/passwordRegisterTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_4"
                android:layout_marginBottom="@dimen/margin_16"
                android:text="@string/password"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress" />

            <EditText
                android:id="@+id/editTextEmailAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8"
                android:layout_marginBottom="@dimen/margin_16"
                android:background="@color/gray_light"
                android:padding="@dimen/padding_4"
                android:ems="10"
                android:hint="@string/youremail_com"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/passwordRegisterTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailTextView"
                android:text="@={viewModel.user.email}" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8"
                android:ems="10"
                android:hint="YourPassword"
                android:textColor="@color/white"
                android:background="@color/gray_light"
                android:padding="@dimen/padding_4"
                android:inputType="textPassword"
                android:textColorHint="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/loginButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordRegisterTextView"
                android:text="@={viewModel.user.password}"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_64"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/_30ssp"
                app:layout_constraintBottom_toTopOf="@+id/emailTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_24"
                android:text="@string/login"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
                android:backgroundTint="@color/gray_light"
                android:onClick="@{()->viewModel.onClickSave()}" />

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="84dp"
                android:hint="AutoComplete"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SIGNUP"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="616dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>